syntax = "proto3";

import "fwdmsg.proto";
package arpc;

//代理服务器与服务器交互rpc及消息定义
//=====================

service SAgent {
  //服务器发送、接收客户端的消息
  rpc Forward (stream ForwardMsg) returns (stream ForwardMsg) {}
  //服务器多播消息给客户端、不接收客户端消息
  rpc Multicast (stream MulticastMsg) returns(stream ForwardMsg) {}
  //服务器与代理交互rpc
  rpc Call(RawMsg) returns (RawMsg) {}
}

//服务器广播消息，代理服务器会将此消息从新封装成Forward消息转给客户端
message MulticastMsg {
  repeated uint32 targets = 1;
  uint32 mid = 2;//消息ID，客户端和服务器协商确定，用于识别消息
  bytes raw = 3;//序列化后的消息
}
